В файле .env сменил логин и пароль

--- a/www/.env
+++ b/www/.env
@@ -7,8 +7,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=laravel
-DB_USERNAME=charlik
-DB_PASSWORD=12baks60
+DB_USERNAME=john
+DB_PASSWORD=TaRzAn
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
